--- a/App3/ChatPage.xaml
+++ b/App3/ChatPage.xaml
@@ -94,8 +94,8 @@
                         </Image.Source>
 
                     </Image>
-                    <Border Height="30" Width="30" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#7F000000" >
-                        <SymbolIcon Symbol="Play"/>
+                    <Border Height="30" Width="30" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#7F000000" IsHitTestVisible="False" >
+                        <SymbolIcon Symbol="Play" IsHitTestVisible="False"/>
                     </Border>
                 </Grid>
             </StackPanel>
@@ -170,8 +170,8 @@
                         </Image.Source>
 
                     </Image>
-                    <Border Height="30" Width="30" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#7F000000" >
-                        <SymbolIcon Symbol="Play"/>
+                    <Border Height="30" Width="30" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#7F000000" IsHitTestVisible="False" >
+                        <SymbolIcon Symbol="Play" IsHitTestVisible="False"/>
                     </Border>
                 </Grid>
             </StackPanel>
