allow bigger preview for messages

--- a/App3/ChatList.xaml
+++ b/App3/ChatList.xaml
@@ -55,7 +55,7 @@
             </ListView.Style>
             <ListView.ItemTemplate>
                 <DataTemplate x:Name="DoubleLineDataTemplate" x:DataType="viewModels:ChatViewModel">
-                    <StackPanel Orientation="Horizontal" Height="50">
+                    <StackPanel Orientation="Horizontal" MinHeight="50" MaxHeight="75">
                         <!--<Ellipse Height="40" Width="40" VerticalAlignment="Center">
                             <Ellipse.Fill>
                                 --><!--<ImageBrush ImageSource="Placeholder.png"/>--><!--
